==> ArduCAM/Arducam_Mega/examples/Pico/pico4ml/lcd/st7789.c <==
#include "hardware/spi.h"
#include "pico/stdlib.h"
#include <inttypes.h>
#include <math.h>
#include <stdio.h>
#include <string.h>
#include "st7789.h"
#define TAG          "ST7789"
#define _DEBUG_      0
#define LCD_SPI_PORT spi0
#define LCD_CS_PIN   20
#define LCD_DC_PIN   21
#define LCD_RST_PIN  22

void spiMasterInit(TFT_t* dev, int16_t GPIO_MOSI, int16_t GPIO_SCLK, int16_t GPIO_CS, int16_t GPIO_DC,
                   int16_t GPIO_RESET, int16_t GPIO_BL)
{
    if (GPIO_CS >= 0) {
        gpio_init(GPIO_CS);
        gpio_set_dir(GPIO_CS, GPIO_OUT);
        gpio_put(GPIO_CS, 1);
    }

    gpio_init(GPIO_DC);
    gpio_set_dir(GPIO_DC, GPIO_OUT);
    gpio_put(GPIO_DC, 1);

    if (GPIO_RESET >= 0) {
        // gpio_pad_select_gpio( GPIO_RESET );
        gpio_init(GPIO_RESET);
        gpio_set_dir(GPIO_RESET, GPIO_OUT);
        gpio_put(GPIO_RESET, 1);
        delayMS(100);
        gpio_put(GPIO_RESET, 0);
        delayMS(100);
        gpio_put(GPIO_RESET, 1);
        delayMS(100);
    }

    if (GPIO_BL >= 0) {
        // gpio_pad_select_gpio(GPIO_BL);
        gpio_init(GPIO_BL);
        gpio_set_dir(GPIO_BL, GPIO_OUT);
        gpio_put(GPIO_BL, 0);
    }
}

bool spiMasterWriteByte(const uint8_t* Data, size_t DataLength)
{
    lcd_cs_low(LCD_CS_PIN);
    // sleep_us(20);
    int wd = spi_write_blocking(LCD_SPI_PORT, Data, DataLength);
    // sleep_us(20);
    lcd_cs_high(LCD_CS_PIN);

    return wd == DataLength;
}

bool spiMasterWriteCommand(TFT_t* dev, uint8_t cmd)
{
    static uint8_t Byte = 0;

    Byte = cmd;
    gpio_put(LCD_DC_PIN, 0);
    return spiMasterWriteByte(&Byte, 1);
}

bool spiMasterWriteDataByte(TFT_t* dev, uint8_t data)
{
    static uint8_t Byte = 0;

    Byte = data;
    gpio_put(LCD_DC_PIN, 1);
    return spiMasterWriteByte(&Byte, 1);
}

bool spiMasterWriteDataWord(TFT_t* dev, uint16_t data)
{
    static uint8_t Byte[2];
    Byte[0] = (data >> 8) & 0xFF;
    Byte[1] = data & 0xFF;
    gpio_put(LCD_DC_PIN, 1);
    return spiMasterWriteByte(Byte, 2);
}

bool spiMasterWriteAddr(TFT_t* dev, uint16_t addr1, uint16_t addr2)
{
    static uint8_t Byte[4];
    Byte[0] = (addr1 >> 8) & 0xFF;
    Byte[1] = addr1 & 0xFF;
    Byte[2] = (addr2 >> 8) & 0xFF;
    Byte[3] = addr2 & 0xFF;
    gpio_put(LCD_DC_PIN, 1);
    return spiMasterWriteByte(Byte, 4);
}

bool spiMasterWriteColor(TFT_t* dev, uint16_t color, uint16_t size)
{
    static uint8_t Byte[1024];
    int index = 0;
    for (int i = 0; i < size; i++) {
        Byte[index++] = (color >> 8) & 0xFF;
        Byte[index++] = color & 0xFF;
    }
    gpio_put(LCD_DC_PIN, 1);
    return spiMasterWriteByte(Byte, size * 2);
}

bool spiMasterWriteColors(TFT_t* dev, uint16_t* colors, uint16_t size)
{
    static uint8_t Byte[1024];
    int index = 0;
    for (int i = 0; i < size; i++) {
        Byte[index++] = (colors[i] >> 8) & 0xFF;
        Byte[index++] = colors[i] & 0xFF;
    }
    gpio_put(LCD_DC_PIN, 1);
    return spiMasterWriteByte(Byte, size * 2);
}

void delayMS(int ms)
{
    sleep_ms(ms);
}

void lcdInit(TFT_t* dev, int width, int height, int offsetx, int offsety, int flag)
{
    dev->_width = width;
    dev->_height = height;
    dev->_offsetx = offsetx;
    dev->_offsety = offsety;
    dev->_font_direction = DIRECTION0;
    dev->_font_fill = false;
    dev->_font_underline = false;

    // spiMasterWriteCommand(dev, 0x01); // Software Reset
    // delayMS(150);

    spiMasterWriteCommand(dev, 0x11); // Sleep Out
    // delayMS(255);
    delayMS(100);

    spiMasterWriteCommand(dev, 0x3A); // Interface Pixel Format
    spiMasterWriteDataByte(dev, 0x55);
    lcdInitData(dev);

    delayMS(10);
    spiMasterWriteCommand(dev, 0x36); // Memory Data Access Control
    if (width == 240)
        spiMasterWriteDataByte(dev, 0xc0); /* L2R_D2U */
    else
        spiMasterWriteDataByte(dev, 0xa0);
    spiMasterWriteDataByte(dev, 0x00);

    // spiMasterWriteCommand(dev, 0x2A); // Column Address Set
    // spiMasterWriteDataByte(dev, 0x00);
    // spiMasterWriteDataByte(dev, 0x00);
    // spiMasterWriteDataByte(dev, 0x00);
    // spiMasterWriteDataByte(dev, 0xF0);

    // spiMasterWriteCommand(dev, 0x2B); // Row Address Set
    // spiMasterWriteDataByte(dev, 0x00);
    // spiMasterWriteDataByte(dev, 0x00);
    // spiMasterWriteDataByte(dev, 0x00);
    // spiMasterWriteDataByte(dev, 0xF0);

    spiMasterWriteCommand(dev, 0x21); // Display Inversion On
    delayMS(10);

    spiMasterWriteCommand(dev, 0x13); // Normal Display Mode On
    delayMS(10);
    if (flag == false) {
        lcdFillScreen(dev, WHITE);
    }
    spiMasterWriteCommand(dev, 0x29); // Display ON
    // delayMS(255);

    if (dev->_bl >= 0) {
        gpio_put(dev->_bl, 1);
    }
}

void lcdDrawPixel(TFT_t* dev, uint16_t x, uint16_t y, uint16_t color)
{
    if (x >= dev->_width)
        return;
    if (y >= dev->_height)
        return;

    uint16_t _x = x + dev->_offsetx;
    uint16_t _y = y + dev->_offsety;

    spiMasterWriteCommand(dev, 0x2A); // set column(x) address
    spiMasterWriteAddr(dev, _x, _x);
    spiMasterWriteCommand(dev, 0x2B); // set Page(y) address
    spiMasterWriteAddr(dev, _y, _y);
    spiMasterWriteCommand(dev, 0x2C); //	Memory Write
    spiMasterWriteDataWord(dev, color);
}

void lcdDrawMultiPixels(TFT_t* dev, uint16_t x, uint16_t y, uint16_t size, uint16_t* colors, bool little)
{
    if (x + size > dev->_width)
        return;
    if (y >= dev->_height)
        return;

    uint16_t _x1 = x + dev->_offsetx;
    uint16_t _x2 = _x1 + (size - 1);
    uint16_t _y1 = y + dev->_offsety;
    uint16_t _y2 = _y1;

    spiMasterWriteCommand(dev, 0x2A); // set column(x) address
    spiMasterWriteAddr(dev, _x1, _x2);
    spiMasterWriteCommand(dev, 0x2B); // set Page(y) address
    spiMasterWriteAddr(dev, _y1, _y2);
    spiMasterWriteCommand(dev, 0x2C); //	Memory Write
    if (little == true)
        spiMasterWriteColors(dev, colors, size);
    else
        spiMasterWriteColorsInvert(dev, colors, size);
}

void lcdDrawFillRect(TFT_t* dev, uint16_t x1, uint16_t y1, uint16_t x2, uint16_t y2, uint16_t color)
{
    if (x1 >= dev->_width)
        return;
    if (x2 >= dev->_width)
        x2 = dev->_width - 1;
    if (y1 >= dev->_height)
        return;
    if (y2 >= dev->_height)
        y2 = dev->_height - 1;

    // ESP_LOGD(TAG, "offset(x)=%d offset(y)=%d", dev->_offsetx, dev->_offsety);
    uint16_t _x1 = x1 + dev->_offsetx;
    uint16_t _x2 = x2 + dev->_offsetx;
    uint16_t _y1 = y1 + dev->_offsety;
    uint16_t _y2 = y2 + dev->_offsety;

    spiMasterWriteCommand(dev, 0x2A); // set column(x) address
    spiMasterWriteAddr(dev, _x1, _x2);
    spiMasterWriteCommand(dev, 0x2B); // set Page(y) address
    spiMasterWriteAddr(dev, _y1, _y2);
    spiMasterWriteCommand(dev, 0x2C); //	Memory Write
    for (int i = _x1; i <= _x2; i++) {
        uint16_t size = _y2 - _y1 + 1;
        spiMasterWriteColor(dev, color, size);
#if 0
		for(j=y1;j<=y2;j++){
			////ESP_LOGD(TAG,"i=%d j=%d",i,j);
			spiMasterWriteDataWord(dev, color);
		}
#endif
    }
}

void lcdBacklightOff(TFT_t* dev)
{
    if (dev->_bl >= 0) {
        gpio_put(dev->_bl, 0);
    }
}

void lcdBacklightOn(TFT_t* dev)
{
    if (dev->_bl >= 0) {
        gpio_put(dev->_bl, 1);
    }
}
